# PersonalObj

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/arbotix_msgs/: Analog.h  Digital.h  EnableRequest.h  EnableResponse.h  RelaxRequest.h  RelaxResponse.h  SetSpeedRequest.h  SetSpeedResponse.h  SetupChannelRequest.h  SetupChannelResponse.h
devel/include/motor_controller/: cmd.h
devel/lib/heart_beat/: client  server
devel/lib/motor_controller/: motor_controller
devel/lib/pkgconfig/: arbotix_controllers.pc  arbotix_firmware.pc  arbotix_msgs.pc  arbotix_python.pc  arbotix_sensors.pc  heart_beat.pc  mbot_description.pc  mbot_teleop.pc  motor_controller.pc
devel/lib/python2.7/dist-packages/arbotix_python/: __init__.py
devel/lib/python2.7/dist-packages/arbotix_sensors/: __init__.py
devel/share/arbotix_controllers/cmake/: arbotix_controllersConfig.cmake
devel/share/arbotix_firmware/cmake/: arbotix_firmwareConfig.cmake
devel/share/arbotix_msgs/cmake/: arbotix_msgs-msg-paths.cmake  arbotix_msgsConfig.cmake
devel/share/arbotix_python/cmake/: arbotix_pythonConfig.cmake
devel/share/arbotix_sensors/cmake/: arbotix_sensorsConfig.cmake
devel/share/heart_beat/cmake/: heart_beatConfig.cmake
devel/share/mbot_description/cmake/: mbot_descriptionConfig.cmake
devel/share/mbot_teleop/cmake/: mbot_teleopConfig.cmake
devel/share/motor_controller/cmake/: motor_controller-msg-extras.cmake  motor_controllerConfig.cmake
devel/share/roseus/ros/arbotix_msgs/: manifest.l
devel/share/roseus/ros/motor_controller/: manifest.l
navgation/: BOSS(CMU) 架构对比1  BOSS(CMU) 架构对比2  BOSS(CMU) 架构对比3  chassis速度控制  mapcsv格式解析.odt  move_base示意图  navigation模块简介.odt  pathfollow数据流图  上位机串口固化  导航原理讲解  导航架构整理  导航架构设计  工控机流程.odt  工控板账户设定说明文档.odt  树莓派初始化流程.odt  模块综述.odt  行为层整理  路径系统结构设计  配置说明1  配置说明11  配置说明12  配置说明14  配置说明2  配置说明3  配置说明4  配置说明5  配置说明6  配置说明8  配置说明9
src/heart_beat/: CMakeLists.txt  package.xml
src/heart_beat/include/heart_beat/: client.h  server.h
src/heart_beat/src/: client.cpp  server.cpp
src/motor_controller/: CMakeLists.txt
(+9 files in other folders)
